2009-08-03  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Virtaal

2009-07-14  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add diffuse merge and diff tool and update
	tortoisehg URL

2009-07-11  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Update pythoncad URL

2009-06-23  Rafael Villar Burke  <pachi@rvburke.com>

	* downloads.src: Update windows download links and add glade3

2009-06-20  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* reference.src: Update the date on the page

2009-06-20  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* reference.src: Link to the references on library.gnome.org

2009-06-07  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* downloads.src: Update with the latest stable versions and
	remove SVN references updating to Git

2009-06-07  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* newsitems.py: Advertise 2.18.0 release of pygobject and
	2.15.1 release of pygtk

2009-06-02  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Gaphas, Writr, PyGtkImageView and PyGtkCanvas

2009-05-10  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* newsitems.py: Advertise 2.17.0 release of pygobject and
	2.15.0 release of pygtk

2009-03-29  Rafael Villar Burke  <pachi@rvburke.com>

	* articles.src: Remove broken link

2009-03-07  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* reference.src: Update reference date

2009-03-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* newsitems.py: Advertise 2.14.1 release

2009-03-06  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* Makefile: Move docs tarballs from Johan's home to mine.

2009-02-26  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add pybootchartgui

2009-02-25  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add jBrout, KeepNote, pyRenamer, Fricorder, Specto

2009-02-16  Rafael Villar Burke  <pachi@rvburke.com>

	* articles.src: Add tutorial by serpia.com: PyGTK+Matplotlib
